lagt till container, hd, nav,as,mn o ft

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
-
+<div>container</div>
+<header>Tjena</header>
+<nav>Navigera</nav>
+<aside>asdsa</aside>
+<main>ad</main>
+<footer>wd</footer>
     <script src="js/script.js"></script>
 </body>
 </html>
