--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
-<div>container</div>
+<div id="container"> 
 <header>Tjena</header>
 <nav>Navigera</nav>
 <aside>asdsa</aside>
 <main>ad</main>
 <footer>wd</footer>
+</div>
     <script src="js/script.js"></script>
 </body>
 </html>
