jag ändrade lite. Jag ska ändra lite med bakgrundsfärgerna och importera bilder.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
-<div id="container"> 
-<header>Tjena</header>
-<nav>Navigera</nav>
-<aside>asdsa</aside>
-<main>ad</main>
-<footer>wd</footer>
+<div id="mobil"> 
+<header>Rovdjur</header>
+<nav>Navigation</nav>
+<aside>ASIDE</aside>
+<main>MAIN</main>
+<footer>FOOTER</footer>
 </div>
     <script src="js/script.js"></script>
 </body>
