lagt till en grid i min grid. ska lägga till bild

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
     <title>Rovdjur</title>
 </head>
 <body>
+    <img src="img/varg.jpg" alt="little wolfie">
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
-<div id="mobil"> 
+<div id="outer-grid"> 
 <header>Rovdjur</header>
-<nav>Navigation</nav>
-<aside>ASIDE</aside>
-<main>MAIN</main>
-<footer>FOOTER</footer>
+<div-1>Navigation
+    <div id="inner-grid">
+        <div>artikel</div>
+        <div>fdsf</div>
+    </div>
+</div-1>
+<div-2>ASIDE</div-2>
+<div-3></div-3>
+<div-4>FOOTER</div-4>
 </div>
     <script src="js/script.js"></script>
 </body>
