försöker få min bild att bli centrerad. Ska fortsätta

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>Rovdjur</title>
 </head>
 <body>
-    <img src="img/varg.jpg" alt="little wolfie">
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
-<div id="outer-grid"> 
+<img src="img/varg2.jpg" alt="liten varg">
+
+    <div id="outer-grid"> 
 <header>Rovdjur</header>
+<div class="image"></div>
 <div-1>Navigation
     <div id="inner-grid">
         <div>artikel</div>
@@ -19,7 +21,7 @@
     </div>
 </div-1>
 <div-2>ASIDE</div-2>
-<div-3></div-3>
+<div-3>foto</div-3>
 <div-4>FOOTER</div-4>
 </div>
     <script src="js/script.js"></script>
