gjorde om hd till div

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 <img src="img/varg2.jpg" alt="liten varg">
 
     <div id="outer-grid"> 
-<header>Rovdjur</header>
-<div class="image"></div>
+<div-5>Stora rovdjur</div-5>
 <div-1>Navigation
     <div id="inner-grid">
         <div>artikel</div>
@@ -21,7 +20,7 @@
     </div>
 </div-1>
 <div-2>ASIDE</div-2>
-<div-3>foto</div-3>
+<div-3>lite text</div-3>
 <div-4>FOOTER</div-4>
 </div>
     <script src="js/script.js"></script>
