--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 <div-5>Stora rovdjur</div-5>
 <div-1>Navigation
     <div id="inner-grid">
-        <div>artikel</div>
-        <div>fdsf</div>
+        <div>Information om biologisk mångfald</div>
+        <div>hey</div>
+        <div>thing</div>
+
     </div>
 </div-1>
 <div-2>ASIDE</div-2>
