--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
-<img src="img/varg2.jpg" alt="liten varg">
+<img src="img/varg2.jpg" alt="liten varg" class="center">
 
     <div id="outer-grid"> 
 <div-5>Stora rovdjur</div-5>
@@ -21,7 +21,7 @@
 
     </div>
 </div-1>
-<div-2>ASIDE</div-2>
+<div-2> thing</div-2>
 <div-3>lite text</div-3>
 <div-4>FOOTER</div-4>
 </div>
