--- a/Article.html
+++ b/Article.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rovdjur 2</title>
+    <link rel="stylesheet" type="text/css" href="css/link1.css">
+
+    <title>Rovdjurens vikt i naturen</title>
 </head>
 <body>
-    
+    <div id="container"></div>
+    <h1>rovdjurens vikt i naturen</h1>
 </body>
 </html>
