länkade en html

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <div-5>Stora rovdjur</div-5>
 <div-1>Navigation
     <div id="inner-grid">
-        <div>Information om biologisk mångfald</div>
+        <div> <a href="fghj.htmlg">Information om rovdjur</a></div>
         <div>hey</div>
         <div>thing</div>
 
     </div>
 </div-1>
-<div-2> thing</div-2>
+<div-2></div-2>
 <div-3>lite text</div-3>
 <div-4>FOOTER</div-4>
 </div>
