--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <div-5>Stora rovdjur</div-5>
 <div-1>Navigation
     <div id="inner-grid">
-        <div> <a href="fghj.htmlg">Information om rovdjur</a></div>
-        <div>hey</div>
-        <div>thing</div>
+        <div><a href="fghj.htmlg">Artikel om rovdjur</a></div>
+        <div><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Biologisk mångfald</a></div>
+        <div><a href="thing.html">thing</a></div>
 
     </div>
 </div-1>
-<div-2></div-2>
-<div-3>lite text</div-3>
+<!-- <div-2></div-2>*/ -->
+<div-3>Om sidan</div-3>
 <div-4>FOOTER</div-4>
 </div>
     <script src="js/script.js"></script>
