fixade med min varg bild

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
-<img src="img/varg2.jpg" alt="liten varg" class="center">
+<img src="img/Webp.net-resizeimage (2).jpg" alt="liten varg" class="center">
 
 <div id="outer-grid"> 
 <div-5>Stora rovdjur</div-5>
@@ -22,7 +22,11 @@
     </div>
 </div-1>
 <!-- <div-2></div-2>*/ -->
-<div-3>Om sidan</div-3>
+<div-3>Om sidan
+    <div id="another-grid">
+        <div>Text area</div>
+    </div>
+</div-3>
 <div-4>FOOTER</div-4>
 </div>
     <script src="js/script.js"></script>
