länkar öppnas på ny flik

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <div-5>Stora rovdjur</div-5>
 <div-1>Navigation
     <div id="inner-grid">
-        <div><a href="fghj.htmlg">Artikel om rovdjur</a></div>
-        <div><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Biologisk mångfald</a></div>
-        <div><a href="thing.html">thing</a></div>
+        <div><a href="fghj.htmlg" target="_blank ">Artikel om rovdjur</a></div>
+        <div><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" >Biologisk mångfald</a></div>
+        <div><a href="https://www.youtube.com/watch?v=wDgQdr8ZkTw&list=PLTmmZZ44iAEeZPba3BYs4OR8BmSDQQhl7&index=45" target="_blank" >Kontakt</a></div>
 
     </div>
 </div-1>
