rensade. fixade bild till länk2

--- a/artikel.html
+++ b/artikel.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/link1.css">
+    <title>Artikel</title>
 </head>
 <body>
+    <img src="img/Webp.net-resizeimage (5).jpg" alt="varg" class="center">
     <div id="container">
 
     </div>
