--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
-<img src="img/Webp.net-resizeimage (2).jpg" alt="liten varg" class="center">
+<img src="img/varg2.jpg" alt="liten varg" class="center">
 
 <div id="outer-grid"> 
 <div-5>Stora rovdjur</div-5>
 <div-1>Navigation
     <div id="inner-grid">
-        <div><a href="fghj.htmlg" target="_blank ">Artikel om rovdjur</a></div>
+        <div><a href="Artikel.html" target="_blank ">Artikel om rovdjur</a></div>
         <div><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" >Biologisk mångfald</a></div>
         <div><a href="https://www.youtube.com/watch?v=wDgQdr8ZkTw&list=PLTmmZZ44iAEeZPba3BYs4OR8BmSDQQhl7&index=45" target="_blank" >Kontakt</a></div>
-
     </div>
 </div-1>
 <!-- <div-2></div-2>*/ -->
