länkar till min artikel ifrån nak

--- a/artikel.html
+++ b/artikel.html
@@ -10,7 +10,9 @@
 <body>
     <img src="img/Webp.net-resizeimage (5).jpg" alt="varg" class="center">
     <div id="container">
-
+        <div-1>
+            <h1>Naturens biologiska mångfald är hotad</h1>
+        </div-1>
     </div>
 </body>
 </html>
