försöker få allt att funka

--- a/artikel.html
+++ b/artikel.html
@@ -9,10 +9,15 @@
 </head>
 <body>
     <img src="img/Webp.net-resizeimage (5).jpg" alt="varg" class="center">
-    <div id="container">
-        <div-1>
-            <h1>Naturens biologiska mångfald är hotad</h1>
-        </div-1>
+
+    <div id="container"> 
+        <div-1>its very mucho awkward not knowing anyone you awkward lil shit</div-1>
+        <div-2>Om sidan
+                <div id="reee">
+                    <div>Text area</div>
+                </div>
+            </div-2>
+            <div-3>FOOTER</div-3>
     </div>
 </body>
 </html>
