försöker fixa min bild

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- Denna fil skall alltid heta index.html och är den första filen på en hemsida -->
-<img src="img/varg2.jpg" alt="liten varg" class="center">
+<img src="img/Webp.net-resizeimage (2).jpg" alt="liten varg" class="center"> 
 
 <div id="outer-grid"> 
 <div-5>Stora rovdjur</div-5>
