--- a/artikel.html
+++ b/artikel.html
@@ -8,10 +8,10 @@
     <title>Artikel</title>
 </head>
 <body>
-    <img src="img/Webp.net-resizeimage (5).jpg" alt="varg" class="center">
+    <img src="img/Webp.net-resizeimage (7).jpg" alt="varg" class="center">
 
     <div id="container"> 
-        <div-1>its very mucho awkward not knowing anyone you awkward lil shit</div-1>
+        <div-1></div-1>
         <div-2>Om sidan
                 <div id="reee">
                     <div>Text area</div>
