fixade min länk

--- a/artikel.html
+++ b/artikel.html
@@ -11,7 +11,7 @@
     <img src="img/Webp.net-resizeimage (7).jpg" alt="varg" class="center">
 
     <div id="container"> 
-        <div-1></div-1>
+        <div-10>hd</div-10>
         <div-2>Om sidan
                 <div id="reee">
                     <div>Text area</div>
