--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- <div-2></div-2>*/ -->
 <div-3>Om sidan
     <div id="another-grid">
-        <div>Text area</div>
+        <div>Hej! </div>
     </div>
 </div-3>
 <div-4>FOOTER</div-4>
