fixa min 1a länk

--- a/artikel.html
+++ b/artikel.html
@@ -11,13 +11,19 @@
     <img src="img/Webp.net-resizeimage (7).jpg" alt="varg" class="center">
 
     <div id="container"> 
-        <div-10>hd</div-10>
-        <div-2>Om sidan
+        <div-10>Naturens biologiska mångfald är hotad</div-10>
+        <div-2> 
                 <div id="reee">
-                    <div>Text area</div>
+                    <div>
+                        <p1>Den biologiska mångfalden i naturen börjar bli allt mer hotad. I takt med att människans ökande tillväxt påverkas de andra djurarterna som finns på planeten. Människans kontinuerliga förändring på både landskap och ekosystem samt jakt efter specifika djur är de största anledningar till varför vår biologiska mångfald blir hotad. 
+
+                        </p1>
+                    </div>
                 </div>
-            </div-2>
-            <div-3>FOOTER</div-3>
+        </div-2>
+        <div-3>kkkkljl</div-3>
+        <div-4>ads</div-4>
+        <div-5></div-5>
     </div>
 </body>
 </html>
