--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <div-1>Navigation
     <div id="inner-grid">
         <div><a href="Artikel.html" target="_blank ">Artikel om rovdjur</a></div>
-        <div><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" >Biologisk mångfald</a></div>
-        <div><a href="https://www.youtube.com/watch?v=wDgQdr8ZkTw&list=PLTmmZZ44iAEeZPba3BYs4OR8BmSDQQhl7&index=45" target="_blank" >Kontakt</a></div>
+        <div><a href="https://www.naturskyddsforeningen.se/vad-vi-gor/skog/varg/vanliga-fragor-om-vargen" target="_blank" >Läs vidare om vargen</a></div>
+        <div><a href="https://www.lansstyrelsen.se/vastra-gotaland/djur/jakt-och-vilt/stora-rovdjur.html" target="_blank" >Stora rovdjur</a></div>
     </div>
 </div-1>
 <!-- <div-2></div-2>*/ -->
@@ -26,7 +26,7 @@
         <div>Hej! </div>
     </div>
 </div-3>
-<div-4>FOOTER</div-4>
+<div-4>Kontakt information</div-4>
 </div>
     <script src="js/script.js"></script>
 </body>
