fixade texten i artikeln

--- a/artikel.html
+++ b/artikel.html
@@ -15,9 +15,9 @@
         <div-2> 
                 <div id="reee">
                     <div>
-                        <p1>Den biologiska mångfalden i naturen börjar bli allt mer hotad. I takt med att människans ökande tillväxt påverkas de andra djurarterna som finns på planeten. Människans kontinuerliga förändring på både landskap och ekosystem samt jakt efter specifika djur är de största anledningar till varför vår biologiska mångfald blir hotad. 
+                        <p class="p1">Den biologiska mångfalden i naturen börjar bli allt mer hotad. I takt med att människans ökande tillväxt påverkas de andra djurarterna som finns på planeten. Människans kontinuerliga förändring på både landskap och ekosystem samt jakt efter specifika djur är de största anledningar till varför vår biologiska mångfald blir hotad. 
 
-                        </p1>
+                        </p>
                     </div>
                 </div>
         </div-2>
