--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="inner-grid">
         <div><a href="Artikel.html" target="_blank ">Artikel om rovdjur</a></div>
         <div><a href="https://www.naturskyddsforeningen.se/vad-vi-gor/skog/varg/vanliga-fragor-om-vargen" target="_blank" >Läs vidare om vargen</a></div>
-        <div><a href="https://www.lansstyrelsen.se/vastra-gotaland/djur/jakt-och-vilt/stora-rovdjur.html" target="_blank" >Stora rovdjur</a></div>
+        <div><a href="https://www.lansstyrelsen.se/vastra-gotaland/djur/jakt-och-vilt/stora-rovdjur.html" target="_blank" >Information om stora rovdjur</a></div>
     </div>
 </div-1>
 <!-- <div-2></div-2>*/ -->
