försöker få till texten bra

--- a/artikel.html
+++ b/artikel.html
@@ -18,6 +18,38 @@
                         <p class="p1">Den biologiska mångfalden i naturen börjar bli allt mer hotad. I takt med att människans ökande tillväxt påverkas de andra djurarterna som finns på planeten. Människans kontinuerliga förändring på både landskap och ekosystem samt jakt efter specifika djur är de största anledningar till varför vår biologiska mångfald blir hotad. 
 
                         </p>
+                        <h class="h1">Vad är biologisk mångfald?
+                        </h>
+                        <p class="p2">Biologisk mångfald innebär variationen som finns mellan och inom olika arter och de livsmiljöer från olika ursprung som finns på jorden. Detta innefattar djur och organismer som lever både på land och i akvatiska miljöer. 
+                        </p>
+                        <h class="h2">Biologiska mångfalden inom FN-länder
+                        </h>
+                        <p class="p3">År 1993 tecknade FN en konvention kallad Mångfaldskonventionen. Detta innebar att den biologiska mångfalden skulle bli mer skyddad i FN-länder. Enligt en text publicerad av Naturvårdsverket(Anki Weibull, CBD – Konvention om biologisk mångfald, 23 april 2019) innebär denna konventionen bättre vård av den biologiska mångfalden i respektive land, samt att man skall kunna nyttja den på ett hållbart sätt.
+                        </p>
+                        <p class="p4">Men den biologiska mångfalden har under senare år blivit alltmer hotad. I en artikel under namnet “De stora rovdjuren är viktiga för den biologiska mångfalden” (na.se, 22 maj 2018) förklarar Jan Bergstam att både rovdjur samt andra sorters djur är hotade. Till exempel har det skett en drastisk minskning av kryp i olika länder i Europa. I Tyskland hade mängden kryp minskat med upp till 80% de senaste 30 åren. Detta får konsekvenser för den födan som kan förses i landet eftersom att mängden växter som har möjlighet att pollineras minskar. Men det är inte bara krypen som minskar i antal utan även de större rovdjuren. Enligt en studie publicerad av science.sciencemag.org (Status and Ecological Effects of the World’s Largest Carnivores, 10 Jan 2014) skrivs det om hur mängden stora rovdjur i världen har minskat med upp till 75%. 
+                        </p>
+                        <h class="h3">Varför minskar mängden rovdjur?
+                        </h>
+                        <p class="p5">En utav de större faktorerna som påverkar den biologiska mångfalden är människan. Människan har en stor påverkan på den biologiska mångfalden som finns på planeten genom en konstant förändring av landskap samt jakt. De konstanta förändringarna som sker av landskapet påverkar djurens levnadsmiljöer drastiskt. Enligt studien ”Status and Ecological Effects of the World’s Largest Carnivores” (science.sciencemag.org , 10 Jan 2014) påverkar förändringarna av landskapen rovdjuren negativt genom att det kan bidra till minskad mängd föda för respektive rovdjur. I takt med minskad mängd föda för rovdjuren kan det leda till ökad konflikt mellan rovdjur, boskap eller människor. I många av dessa konflikter blir slutresultatet ofta rovdjurets död på grund av människans intolerans mot djuret handlingar. 
+                        </p>
+                        <p class="p6">En annan orsak till det ökande hotet av rovdjur är den ökade jakten samt illegal jakt på rovdjur. Enligt artikeln “Illegal jakt” (de5stora.se) har mängden vargar som dödats illegalt ökat från 12-13% till 15-18% unde de senaste åtta åren. Anledningen bakom illegal jakt kan variera. Till exempel kan det bero på missnöje av lagar i regionen man lever i och protesterar mot samhället genom att jaga djuren illegalt. Ännu ett problem som uppstår med illegal jakt är dessa personer som begår detta brott sällan fälls för det som de har begått och därigenom pågår den illegala jakten av rovdjur.
+                        </p>
+                        <h class="h4">Vilka konsekvenser väcks i takt med ökat hot mot rovdjur?
+                        </h>
+                        <p class="p7">De rovdjur som finns i naturen fyller en viktig roll i respektive ekosystem. Exempelvis har vargen en viktig roll i naturen i-och-med att den håller efter växtätarna. Enligt en artikel publicerad av Naturskyddsföreningen vid namn “Vargen behövs i en balanserad miljö” förklarar de hur växtätarnas beteende påverkas av vargarna genom att de äter de svagare och därigenom påverkar hur växtätarna utvecklas vidare. 
+                        </p>
+                        <p class="p8">Eftersom vargarna fyller denna funktion kan det bidra till konsekvenser för resten av ekosystemet. Gnagare samt växtlighet och utbredning av skog och träd påverkas negativt om vargarna kom att upphöra. Upphörandet av en specifik art kan leda till den så kallade “top-down” effekten som innebär att en art försvinner och därigenom rubbar hela ekosystemet som arten varit del av.
+                        </p>
+                        <p class="p9">Ett exempel på detta är den amerikanska nationalparken Yellowstone.
+                        </p>
+                        <h class="h5">Situationen i Yellowstone
+                        </h>
+                        <p class="p10">I mitten av 1900-talet rapporterades det att de sista vargarna som hade en hållbar grund i Yellowstone hade dött ut. Detta skedde på grund utav brist av skydd åt vargarna som i sin tur bidrog till ökad jakt på vargar i detta område i och med att man ville utrota vargar i detta område, vilket man till sist lyckades med. Under flera decennier var vargen frånvarande i Yellowstone. Det dröjde fram till år 1995 innan vargarna blev re-introducerade till denna nationalparken och sedan dess har ekosystemet påverkas drastiskt. 
+                        </p>
+                        <p class="p11">Som tidigare påpekat har vargen en positiv inverkan på ekosystemet samt miljön den lever i genom att den påverkar både växt- och djurlivet för medlemmarna i samma ekosystem. Däremot kan ett ekosystem ej repareras helt och hållet enligt en artikel vid namn “Yellowstone's wolves are back, but they haven't restored the park's ecosystem. Here's why”(usatoday.com, Katharine Lackey, Sep 7, 2018). Under de många år som ekosystemet stod utan varg hann det ändras markant och även ifall det finns tecken på att naturen återhämtar sig finns det få tecken på att naturen kommer att göra en fulländad återhämtning. 
+                        </p>
+                        <p class="p12">Författare: Ellinor Brandin
+                        </p>
                     </div>
                 </div>
         </div-2>
