--- a/artikel.html
+++ b/artikel.html
@@ -8,8 +8,7 @@
     <title>Artikel</title>
 </head>
 <body>
-    <img src="img/Webp.net-resizeimage (7).jpg" alt="varg" class="center">
-
+    <a href="index.html"><img src="img/Webp.net-resizeimage (7).jpg" alt="Kom tillbaka till index"></a>
     <div id="container"> 
         <div-10>Naturens biologiska mångfald är hotad</div-10>
         <div-2> 
