--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div-1>Navigation
     <div id="inner-grid">
         <div><a href="Artikel.html" target="_blank ">Artikel om rovdjur</a></div>
-        <div><a href="https://www.naturskyddsforeningen.se/vad-vi-gor/skog/varg/vanliga-fragor-om-vargen" target="_blank" >Läs vidare om vargen</a></div>
+        <div><a href="annan.html" target="_blank" >Läs vidare om vargen</a></div>
         <div><a href="https://www.lansstyrelsen.se/vastra-gotaland/djur/jakt-och-vilt/stora-rovdjur.html" target="_blank" >Information om stora rovdjur</a></div>
     </div>
 </div-1>
