--- a/annan.html
+++ b/annan.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/annan.css">
 </head>
 <body>
         <a href="index.html"><img src="img/Webp.net-resizeimage (7).jpg" alt="Kom tillbaka till index"></a>
-</body>
+        <div-10>Infromation om vargar</div-10>
+        <div-2>*Infoga information om vargar här*</div-2>
+        <div-3>Här är den fina loggan som leder till index sidan:
+            <div id="glasses">
+                    <a href="index.html"><img src="img/sunglasses.png" alt="Kom tillbaka till index"></a>
+
+            </div>
+        </div-3>
+        
+    </body>
 </html>
