--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
         <div>Hej!</div>
     </div>
 </div-3>
-<div-4>Kontakt information</div-4>
+<div-4>Fin-fin logga:
+    <div id="hello">
+        <a href="index.html"><img src="img/sunglasses.png" alt="Kom tillbaka till index"></a>
+
+    </div>
+</div-4>
 </div>
     <script src="js/script.js"></script>
 </body>
