--- a/artikel.html
+++ b/artikel.html
@@ -8,7 +8,7 @@
     <title>Artikel</title>
 </head>
 <body>
-    <a href="index.html"><img src="img/Webp.net-resizeimage (7).jpg" alt="Kom tillbaka till index"></a>
+   <img src="img/Webp.net-resizeimage (7).jpg" alt="Kom tillbaka till index"></a>
     <div id="container"> 
         <div-10>Naturens biologiska mångfald är hotad</div-10>
         <div-2> 
@@ -52,8 +52,8 @@
                     </div>
                 </div>
         </div-2>
-        <div-3>kkkkljl</div-3>
-        <div-4>ads</div-4>
+        <div-3></div-3>
+        <div-4></div-4>
         <div-5></div-5>
     </div>
 </body>
