--- a/artikel.html
+++ b/artikel.html
@@ -8,14 +8,13 @@
     <title>Artikel</title>
 </head>
 <body>
-   <img src="img/Webp.net-resizeimage (7).jpg" alt="Kom tillbaka till index"></a>
+   <img src="img/Webp.net-resizeimage (7).jpg" alt="Kom tillbaka till index">
     <div id="container"> 
         <div-10>Naturens biologiska mångfald är hotad</div-10>
         <div-2> 
                 <div id="reee">
                     <div>
                         <p class="p1">Den biologiska mångfalden i naturen börjar bli allt mer hotad. I takt med att människans ökande tillväxt påverkas de andra djurarterna som finns på planeten. Människans kontinuerliga förändring på både landskap och ekosystem samt jakt efter specifika djur är de största anledningar till varför vår biologiska mångfald blir hotad. 
-
                         </p>
                         <h class="h1">Vad är biologisk mångfald?
                         </h>
